# modern-data-stack

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: ci.yml
.github/workflows/: ci.yml
data/chroma/: chroma.sqlite3
infra/airflow/dags/: dag_coleta.py  dag_ml.py
infra/dbt/: dbt_project.yml
infra/dbt/models/marts/: mart_arboviroses.sql
infra/dbt/models/staging/: stg_casos.sql  stg_clima.sql  stg_clima_semanal.sql
infra/docker/: Dockerfile.api  Dockerfile.streamlit
src/: config.py
src/api/: main.py
src/dashboard/: app.py
src/ingestion/: infodengue.py  openmeteo.py  pipeline.py
src/ml/: features.py  modelo.py  treinar.py
src/rag/: chat.py  indexador.py
src/storage/: database.py
src/streaming/: consumer.py  producer.py
tests/: test_api.py  test_config.py  test_database.py  test_infodengue.py
