[project]
name = "modern-data-stack"
version = "0.1.0"
description = "Dashboard Nacional de Arboviroses — Modern Data Stack"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "dbt-core>=1.11.10",
    "dbt-duckdb>=1.10.1",
    "scikit-learn>=1.8.0",
    "mlflow>=3.12.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "streamlit>=1.57.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.27.2",
    "plotly>=6.7.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-community>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
